# memory-bench-designer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
runner/: README.md  pyproject.toml
runner/configs/: scenario-coding-agent.yaml  scenario-game-ai.yaml  scenario-npc-cognition.yaml
runner/configs/protocols/: default.yaml
runner/configs/scenario_profiles/: coding-agent.yaml
runner/configs/scenarios/: coding-agent.yaml  game-ai.yaml  npc-cognition.yaml
runner/configs/trace_profiles/: coding-agent.yaml
runner/configs/traces/: coding-architecture-update.yaml  llm-wiki-evolution.yaml  noise-contamination.yaml  preference-reversal.yaml  preference-stable.yaml
runner/src/memory_bench/: __init__.py  cli.py  profile.py  report.py  runner.py  trace.py
runner/src/memory_bench/adapters/: __init__.py  actr.py  base.py  bm25.py  composite.py  embedding.py  random_retrieval.py  recency.py
runner/src/memory_bench/metrics/: __init__.py  adaptation.py  base.py  exploration.py  maintenance.py  ranking.py
runner/src/memory_bench/scenario/: __init__.py  context.py  generator.py  item_pool.py
runner/tests/: test_baseline.py  test_capability_profile.py  test_cli.py  test_generator_edge_cases.py  test_legacy_yaml.py  test_protocol_hash.py  test_trace_replay.py
skill/: SKILL.md
skill/examples/: game-ai-walkthrough.md  npc-cognition-walkthrough.md
skill/references/: adapter-profiles.md  use-case-patterns.md
skill/templates/: pattern.md.tmpl  scenario.yaml.tmpl  weights.yaml.tmpl
